tests/baselines/reference/scannerES3NumericLiteral6.errors.txt
scannerES3NumericLiteral6.ts(1,4): error TS1124: Digit expected.


==== scannerES3NumericLiteral6.ts (1 errors) ====
    1e+
       
!!! error TS1124: Digit expected.